# fastapi_and_react_dev

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/: main.py  routes.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/auth/: controlller.py  model.py  service.py  utils.py
backend/src/config/: settings.py
backend/src/database/: database.py
backend/src/entities/: __init__.py  user.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: index.tsx
frontend/src/components/hooks/: hookUseCallback.tsx  hookUseContext.tsx  hookUseEffect.tsx  hookUseMemo.tsx  hookUseReducer.tsx  hookUseRef.tsx  hookUseState.tsx  index.tsx  lazyLoading.tsx
